--- a/cursoDeVerano/histogramas/templates/combined_histograms.html
+++ b/cursoDeVerano/histogramas/templates/combined_histograms.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 
-
+{% block title %}
+Combined Histograms
+{% endblock %}
 
 {% block content %}
-<div class="container mt-5 carousel-container" data-bs-theme="dark">
+<div class="container mt-5 carousel-container"  data-bs-theme="dark">
   <div id="histogramCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       {% for histogram in histograms %}
       <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}" aria-current="true" aria-label="Slide {{ forloop.counter }}"></button>
       {% endfor %}
+      <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ histograms|length }}" aria-label="3D Histogram"></button>
     </div>
     <div class="carousel-inner">
       {% for histogram in histograms %}
@@ -16,6 +19,8 @@
         <img src="data:image/png;base64,{{ histogram.image }}" class="d-block w-100 custom-img-size" alt="Histogram of {{ histogram.attribute }} for {{ histogram.diagnosis }}">
       </div>
       {% endfor %}
+      <div class="carousel-item">
+        <img src="data:image/png;base64,{{ plot_3d_histogram }}" class="d-block w-100 custom-img-size" alt="3D Histogram of Perimetro and Textura">
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#histogramCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
