--- a/cursoDeVerano/histogramas/templates/combined_histograms.html
+++ b/cursoDeVerano/histogramas/templates/combined_histograms.html
@@ -11,7 +11,9 @@ Combined Histograms
       {% for histogram in histograms %}
       <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}" aria-current="true" aria-label="Slide {{ forloop.counter }}"></button>
       {% endfor %}
-      <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ histograms|length }}" aria-label="3D Histogram"></button>
+      <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ index_3d_b }}" aria-label="3D Histogram Benign"></button>
+      <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ index_3d_m }}" aria-label="3D Histogram Malignant"></button>
+      <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ index_3d_combined }}" aria-label="3D Histogram Combined"></button>
     </div>
     <div class="carousel-inner">
       {% for histogram in histograms %}
@@ -20,7 +22,14 @@ Combined Histograms
       </div>
       {% endfor %}
       <div class="carousel-item">
-        <img src="data:image/png;base64,{{ plot_3d_histogram }}" class="d-block w-100 custom-img-size" alt="3D Histogram of Perimetro and Textura">
+        <img src="data:image/png;base64,{{ plot_3d_histogram_b }}" class="d-block w-100 custom-img-size" alt="3D Histogram of Perimetro and Textura (Benign)">
+      </div>
+      <div class="carousel-item">
+        <img src="data:image/png;base64,{{ plot_3d_histogram_m }}" class="d-block w-100 custom-img-size" alt="3D Histogram of Perimetro and Textura (Malignant)">
+      </div>
+      <div class="carousel-item">
+        <img src="data:image/png;base64,{{ plot_3d_histogram_combined }}" class="d-block w-100 custom-img-size" alt="3D Histogram of Perimetro and Textura (Combined)">
+      </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#histogramCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
