Added radius to the database, added the combined histograms

--- a/cursoDeVerano/histogramas/templates/combined_histograms.html
+++ b/cursoDeVerano/histogramas/templates/combined_histograms.html
@@ -6,10 +6,13 @@ Combined Histograms
 
 {% block content %}
 <div class="container mt-5 carousel-container"  data-bs-theme="dark">
-  <div id="histogramCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div id="histogramCarousel" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
       {% for histogram in histograms %}
       <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}" aria-current="true" aria-label="Slide {{ forloop.counter }}"></button>
+      {% endfor %}
+      {% for combined_histogram in combined_histograms %}
+      <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ histograms|length|add:forloop.counter0 }}" aria-label="Combined Histogram {{ combined_histogram.attribute }}"></button>
       {% endfor %}
       <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ index_3d_b }}" aria-label="3D Histogram Benign"></button>
       <button type="button" data-bs-target="#histogramCarousel" data-bs-slide-to="{{ index_3d_m }}" aria-label="3D Histogram Malignant"></button>
@@ -19,6 +22,11 @@ Combined Histograms
       {% for histogram in histograms %}
       <div class="carousel-item {% if forloop.first %}active{% endif %}">
         <img src="data:image/png;base64,{{ histogram.image }}" class="d-block w-100 custom-img-size" alt="Histogram of {{ histogram.attribute }} for {{ histogram.diagnosis }}">
+      </div>
+      {% endfor %}
+      {% for combined_histogram in combined_histograms %}
+      <div class="carousel-item">
+        <img src="data:image/png;base64,{{ combined_histogram.image }}" class="d-block w-100 custom-img-size" alt="Combined Histogram of {{ combined_histogram.attribute }}">
       </div>
       {% endfor %}
       <div class="carousel-item">
@@ -42,4 +50,6 @@ Combined Histograms
   </div>
 </div>
 {% endblock %}
+
+
 
